# GP-LVM

./: #demo.py#  .gitignore  .pylintrc  Demo.ipynb  LICENSE  README.md  demo.py  demo.py~RF75ef77.TMP  environment.yml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
gplvm_lib/: __init__.py  demo.py  gplvm.py  kernels.py  kernels.py~RF39654c60.TMP  linear_gplvm.py  nonlinear_gplvm.py  pca.py  plotting.py
src/: demo.py  gplvm.py  nonlinear_gplvm.py
