[metadata]
name = GP-LVM-Jack-Hunt
version = 0.0.1
author = Dr J M Hunt
author_email = jackmileshunt@gmail.com
description = An implementation of the Gaussian Process Latent Variable Model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JackHunt/GP-LVM
project_urls =
    Bug Tracker = https://github.com/JackHunt/GP-LVM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
python_requires = >=3.6